Headless profile for tests was added